--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 
 </head>
+
 <body>
     <!-- Header-->
     <header id="top">
@@ -44,7 +45,7 @@
                         alt="" /> </div>
                 <div class="col-sm-6">
                     <p class="text-right top-phone">委託老師：<a
-                            href="tel:https://www.facebook.com/profile.php?id=61551227498470">常宇翔 <i class="fa fa-link"
+                            href="https://www.facebook.com/profile.php?id=61551227498470">常宇翔 <i class="fa fa-link"
                                 aria-hidden="true"></i></a></p>
                 </div>
             </div>
@@ -211,4 +212,5 @@
         });
     });
 </script>
+
 </html>
