--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <!-- /slider -->
 
 
-    <!--Copyright-->
+    <!--Copyright 測試修改-->
     <div class="copy">
         <div class="container np">
             <p>by. 小茉莉</p>
