首頁修改錯字

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                         <p>因為想準備2025年4月份的生日委託，所以加入了COS委託社團，連續刷了好幾天，也發了匿名帖徵求，但從來沒約過委託，真的很緊張😣</p>
                                         <p>某一天，突然就在社團上看到常宇翔老師發的委託條，前兩個名額甚至還是無償💝(老師人真的太好)，馬上衝上去私訊了！畢竟勇敢的人先享受世界！12/8是個幸運🍀的小日子~
                                         </p>
-                                        <p>接下來斷斷續續討論了好幾天，也因為是第一次約COS委託，不太知道該怎麼安排，只能直接告訴老師，我的目標只有快閃店，其他的形成都可以隨意🥰，而老師知道後，也是很貼心的幫忙想附近有哪裡好玩的(超級親切)，老師提供了很多資訊給我，我們陸續討論確定行程後，老師還整理了一份攻略📑(真的超級用心的，不給妳們看)。
+                                        <p>接下來斷斷續續討論了好幾天，也因為是第一次約COS委託，不太知道該怎麼安排，只能直接告訴老師，我的目標只有快閃店，其他的行程都可以隨意🥰，而老師知道後，也是很貼心的幫忙想附近有哪裡好玩的(超級親切)，老師提供了很多資訊給我，我們陸續討論確定行程後，老師還整理了一份攻略📑(真的超級用心的，不給妳們看)。
                                         </p>
                                         <P>我也開始規劃自己的部分，因為本人長年沒化過妝，想在當天拍點好看的照片，出發之前也是約了美容院、找在地妝娘，還買了假髮(新手小白真的別亂入手，妝娘說買得品質超差還不便宜哈哈哈)，準備了美美的新衣服🎀...等等，一切都只為了能夠在現實跟遊戲裡的愛人來一場美好的約會，真的很謝謝老師給我一次體驗的機會，在此刻內心早已期待滿滿。
                                         </p>
