編輯連結資訊

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                         alt="" /> </div>
                 <div class="col-sm-6">
                     <p class="text-right top-phone">委託老師：<a
-                            href="https://www.facebook.com/profile.php?id=61551227498470">常宇翔 <i class="fa fa-link"
-                                aria-hidden="true"></i></a></p>
+                            href="https://www.facebook.com/profile.php?id=61566341313458&locale=zh_TW">常宇翔 <i
+                                class="fa fa-link" aria-hidden="true"></i></a></p>
                 </div>
             </div>
         </div>
