編輯委託須知

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                         <h1><span>謝謝老師接我的委託</span></h1>
                                         <p>我真的很開心，如果未來有想要委託老師的小夥伴，大力推薦。</p>
                                         <a class="btn"
-                                            href="https://docs.google.com/document/d/1-vyXHOumwVYHR6pgk9u9aELuyvBLvwyqM8lLQkyiNnk/edit?fbclid=IwY2xjawHzFV5leHRuA2FlbQIxMAABHRDtOLui-5ltjatx2q9DWB3tFP8lOP2gibhOeUYfY6csJUwA73h6cO6z0Q_aem_C-0YJYO3XCvw-1fa2XraqQ&tab=t.0"
+                                            href="https://www.facebook.com/share/p/12Fe3oRdoDA/?mibextid=wwXIfr"
                                             target="blank">老師委託須知 <i class="fa fa-long-arrow-right"
                                                 aria-hidden="true"></i></a>
                                     </div>
